<resources>
    <string name="app_name">AGame</string>
    <string name="PlayButtonCaption">Play</string>
    <string name="Level1ButtonCaption">01</string>
    <string name="Level2ButtonCaption">02</string>
    <string name="Level3ButtonCaption">03</string>
    <string name="Level4ButtonCaption">04</string>
    <string name="Level5ButtonCaption">05</string>
    <string name="Level6ButtonCaption">06</string>
    <string name="Level7ButtonCaption">07</string>
    <string name="Level8ButtonCaption">08</string>
    <string name="Level9ButtonCaption">09</string>
    <string name="Level10ButtonCaption">10</string>
    <string name="Level11ButtonCaption">11</string>
    <string name="Level12ButtonCaption">12</string>
    <string name="Level13ButtonCaption">13</string>
    <string name="Level14ButtonCaption">14</string>
    <string name="Level15ButtonCaption">15</string>
    <string name="Level16ButtonCaption">16</string>
    <string name="Level17ButtonCaption">17</string>
    <string name="Level18ButtonCaption">18</string>
    <string name="Level19ButtonCaption">19</string>
    <string name="Level20ButtonCaption">20</string>
    <string name="LevelSelectActivityCaption">Levels</string>
    <string name="NotImplementedExceptionMessage">Class must be implemented</string>
    <string name="Level1Caption">Level 01</string>
    <string name="Level2Caption">Level 02</string>
    <string name="Level3Caption">Level 03</string>
    <string name="DialogGoButtonCaption">Go!</string>
    <string name="DialogContinueButtonCaption">Continue</string>
    <string name="LevelResultSuccess">Success</string>
    <string name="LevelResultFailed">Failed</string>
    <string name="LevelResultNone">None</string>
    <string name="FinishDialogContinueOffer">Continue?</string>
    <string name="FinishDialogRetryOffer">Retry?</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
