<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/lib/com.firelab.agame.LevelButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.firelab.agame.LevelSelectActivity"
    android:background="@color/MainBackgroundColor"
    android:id="@+id/MainLayout">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ActivityCaptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:stretchColumns="*"
        android:shrinkColumns="*" >
        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:baselineAligned="false">
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level1ButtonCaption"
                android:id="@+id/btnLevel1"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="1" />

            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level2ButtonCaption"
                android:id="@+id/btnLevel2"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="2" />

            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level3ButtonCaption"
                android:id="@+id/btnLevel3"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="3" />
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level4ButtonCaption"
                android:id="@+id/btnLevel4"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="4" />
        </TableRow>
        <TableRow
            android:id="@+id/TableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:baselineAligned="false">
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level5ButtonCaption"
                android:id="@+id/btnLevel5"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                custom:levelNumber="5"
                android:layout_margin="5dp" />
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level6ButtonCaption"
                android:id="@+id/btnLevel6"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="6" />
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level7ButtonCaption"
                android:id="@+id/btnLevel7"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="7" />
            <com.firelab.agame.LevelButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Level8ButtonCaption"
                android:id="@+id/btnLevel8"
                android:background="@color/LevelButtonBackground"
                android:textColor="@color/MainTextColor"
                android:textSize="20sp"
                android:layout_margin="5dp"
                custom:levelNumber="8" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LevelSelectActivityCaption"
        android:id="@+id/ActivityCaptionTextView"
        android:textColor="@color/MainTextColor"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
